[package]
name = "reflux"
version = "1.1.1"
edition = "2021"
license = "GPL-3.0"
homepage = "https://github.com/kyleb000/reflux/wiki"
repository = "https://github.com/kyleb000/reflux"
description = "Reflux is a Rust library designed to simplify the creation of scalable distributed computing architectures. Whether you're building complex distributed systems or looking to streamline your parallel processing tasks, Reflux provides a robust and efficient foundation."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.4"
anyhow = "1.0.82"
