[package]
name = "reflux"
version = "6.0.0"
edition = "2021"
license = "LGPL-3.0-only"
homepage = "https://github.com/kyleb000/reflux/wiki"
repository = "https://github.com/kyleb000/reflux"
description = "A microservice framework aimed at scalability, flexibility and ease of use"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.14"
